# tauri-rbook

./: Cargo.toml  Makefile  README.md  README_zh.md  package-lock.json  package.json  pnpm-lock.yaml
output/: TOC.xhtml  chapter0000.xhtml  chapter00000.xhtml  chapter0001.xhtml  chapter0002.xhtml  chapter0003.xhtml  chapter0004.xhtml  chapter0005.xhtml  chapter0006.xhtml  chapter0007.xhtml  chapter0008.xhtml  chapter0009.xhtml  cover  cover.xhtml  default.css  illus0001.xhtml  illus0002.xhtml  illus0003.xhtml  illus0004.xhtml  illus0005.xhtml  illus0007.xhtml  illus006.xhtml  kuchie-001  message.xhtml  ncx  necessary.css  p042  p060  p071  p080  p132  p177  p221  p283  p295  p314  p326-327  polo.xhtml  pre.xhtml  special0001.xhtml  (+10 more)
src/: App.vue  main.rs  main.ts
src-tauri/: Cargo.toml  pg76071-images-3.epub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: convert.rs  cover.rs  epub.rs  file.rs  lib.rs  main.rs  mark.rs  menu.rs  model.rs  search.rs  style.rs
src/api/: book.ts  bookmark.ts  books.ts  index.ts  markdown.ts  search.ts  style.ts  types.ts
src/assets/: global.css  markdown.css
src/components/: BookSearch.vue  MenuView.css  MenuView.vue  ReaderView.css  ReaderView.vue  SearchView.css  SearchView.vue  bookmarkPanel.vue  tocPannel.vue  windowControl.vue
src/components/ReaderView/: ReaderView.css  ReaderView.vue
src/router/: index.ts
src/types/: markdown-it-plugins.d.ts  model.ts  type.ts
src/utils/: CreateWindow.ts  ReaderViewUtil.ts  bookContentThemes.ts  markdown.ts  settingsWindow.ts  themeManager.ts
(+11 files in other folders)
